syntax = "proto3";

package yandex.mdb.cms.v1;
option go_package = "a.yandex-team.ru/cloud/mdb/cms/api/grpcapi/v1;cmsv1";

import "google/rpc/status.proto";
import "cloud/mdb/cms/api/grpcapi/v1/instance_operation.proto";

service DutyService {
  rpc Alarm(AlarmRequest) returns (AlarmResponse) {}
  rpc ChangeStatus(ChangeStatusRequest) returns (ChangeStatusResponse) {}
  rpc ResolveInstancesByDom0(ResolveInstancesByDom0Request) returns (InstanceListResponce) {}
  rpc Dom0Instances(Dom0InstancesRequest) returns (Dom0InstancesResponse) {}
}

message AlarmRequest {}

message AlarmResponse {
  enum Status {
    OK = 0;
    WARNING = 1;
    CRITICAL = 2;
  }
  Status status = 1;
  string description = 2;

  google.rpc.Status error = 3;
}

message ChangeStatusRequest {
  string id = 1;
  enum Status {
    PROCESSING = 0;
    OK = 1;
  }
  Status status = 2;
}

message ChangeStatusResponse {
  google.rpc.Status error = 1;
}

message ResolveInstancesByDom0Request {
    repeated string dom0 = 1;
}

message Instance {
    string dom0 = 1;
    string fqdn = 2;
}

message InstanceListResponce {
    repeated Instance instance = 1;
}

message Dom0InstancesRequest {
    string dom0 = 1;
}

message WellKnownInstance {
    string conductor_group = 1;
    string dbm_cluster_name = 2;
    string fqdn = 3;
    repeated int32 volumes = 4;
}

message Dom0InstancesResponse {
    repeated WellKnownInstance well_known = 1;
    repeated string unknown = 2;
}
